# revelium

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dummy_prompts.json  main.py  pyproject.toml
api/: app.py  indexer.py  main.py
benchmarks/: accuracy.py  clustering.py  constants.py  helpers.py  indexing.py  labelling.py
client/: revelium_client.py
revelium/: cluster.py  constants.py  data.py  errors.py  indexer.py  main.py  plot.py  semantic_filter.py  tokens.py  utils.py
revelium/api/: local.py
revelium/constants/: __init__.py  api.py  llms.py  models.py
revelium/core/: engine.py
revelium/embeddings/: chroma_store.py  helpers.py
revelium/models/: manage.py
revelium/prompts/: cluster.py  indexer.py  indexer_listener.py  prompt_indexer.py  prompts_manager.py  types.py
revelium/prompts/store/: __init__.py  in_memory_prompt_store.py  prompt_store.py  sqlite_prompt_store.py
revelium/providers/: types.py
revelium/providers/embeddings/: openai.py
revelium/providers/llm/: llm_client.py  openai.py
revelium/schemas/: api.py  config.py  label.py  llm.py  model.py  revelium_config.py
revelium/utils/: decorators.py  file.py
server/: app.py
tests/: api_test.py  model_manager_test.py
