[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revelium"
version = "0.1.0"
description = "Revelium app"
requires-python = ">=3.10"

dependencies = [
    "chromadb==1.3.4",
    "smartscan @ git+https://github.com/smartscanapp/smartscan-lib.git@main",
    "aiosqlite==0.22.1",
    "matplotlib==3.10.8",
    "openai==2.14.0",
    "scikit-learn==1.7.2",
    "tiktoken==0.12.0",
    "pytest==9.0.2"
]

[project.optional-dependencies]
api = [
    "fastapi==0.121.2",
    "python-multipart==0.0.20"
]

[tool.setuptools]
packages = ["revelium", "api"]